<resources>
    <string name="app_name">One</string>

    <!--  MainActivity  -->
    <string name="main_widgets">Widgets</string>
    <string name="main_animation">Animation</string>
    <string name="main_jetpack">Jetpack</string>

    <!--  Widgets  -->
    <string name="widgets_recyclerview">RecyclerView</string>

    <!--  RecyclerView  -->
    <string name="recycler_home_title">RecyclerView</string>
    <string name="recycler_native">Native</string>
    <string name="recycler_footer_header">Footer Header</string>
    <string name="recycler_group">Group</string>
    <string name="recycler_more_style">More Style</string>
    <string name="recycler_node_tree">Node Tree</string>
    <string name="recycler_node_grid">Node Grid</string>
    <string name="recycler_drag_item">Drag Item</string>
    <string name="recycler_slide_delete">Slide delete</string>
    <string name="recycler_node_text_first">First</string>
    <string name="recycler_node_text_second">Second</string>
    <string name="recycler_node_text_third">Third</string>
    <string name="recycler_text_add">Add</string>
    <string name="recycler_text_data_empty">Data is empty!</string>
    <string name="recycler_text_delete">Delete</string>
    <string name="recycler_text_header">Header</string>

    <!--  Animation  -->
    <string name="animation_frame">Frame Animation</string>
    <string name="animation_property">Property Animation</string>
    <string name="animation_tween">Tween Animation</string>
    <string name="animation_frame_start">Start</string>
    <string name="animation_frame_stop">Stop</string>
    <string name="animation_text_xml">XML</string>
    <string name="animation_text_code">Code</string>


    <string name="btn_android_animation">Android Animation</string>
    <string name="btn_android_recyclerview">Android RecyclerView</string>
    <string name="btn_activity_animation">Activity Animation Change</string>
    <string name="btn_fragment_animation">Fragment Animation Change</string>
    <string name="btn_replace_fragment">Replace Fragment</string>
    <string name="btn_start_property_ofInt">Property ofInt</string>
    <string name="btn_start_property_ofObject">Property ofObject</string>
    <string name="btn_property_manual_of_object">Property 手动ofObject</string>
    <string name="btn_property_trans_of_object">Property Trans</string>
    <string name="title_one_fragment">One Fragment</string>
    <string name="title_two_fragment">Two Fragment</string>
    <string name="title_list_fragment">List Fragment</string>
    <string name="title_frame_activity">Frame Animation</string>
    <string name="title_property_activity">Property Animation</string>

    <string name="tween_anim_alpha_code">Alpha Code</string>
    <string name="tween_anim_alpha_xml">Alpha xml</string>
    <string name="tween_anim_rotate_code">Rotate code</string>
    <string name="tween_anim_rotate_xml">Rotate xml</string>
    <string name="tween_anim_scale_code">Scale code</string>
    <string name="tween_anim_scale_xml">Scale xml</string>
    <string name="tween_anim_translate_code">Translate code</string>
    <string name="tween_anim_translate_xml">Translate xml</string>

    <string name="frame_anim_start_xml">Start Xml</string>
    <string name="frame_anim_stop_xml">Stop Xml</string>
    <string name="frame_anim_start_code">Start Code</string>
    <string name="frame_anim_stop_code">Stop Code</string>
    <string name="tween_animation">Tween Animation</string>

</resources>