<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <Button
        android:id="@+id/btn_start_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frame_anim_start_xml"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/guideline3" />

    <Button
        android:id="@+id/btn_stop_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frame_anim_stop_xml"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/btn_start_xml" />

    <Button
        android:id="@+id/btn_start_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frame_anim_start_code"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/guideline3" />

    <Button
        android:id="@+id/btn_stop_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frame_anim_stop_code"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/btn_start_code" />

    <ImageView
        android:id="@+id/iv_gif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_stop_xml"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>