<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/anim_frame_toolbar"
        layout="@layout/app_bar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/anim_frame_xml_cv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp_8"
        app:cardCornerRadius="@dimen/dp_8"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toStartOf="@id/anim_frame_code_cv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/anim_frame_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/anim_frame_xml_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animation_text_xml"
                android:textSize="@dimen/sp_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/anim_frame_xml_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/shape_btn_round"
                android:text="@string/animation_frame_start"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/anim_frame_xml_title" />

            <Button
                android:id="@+id/anim_frame_xml_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/shape_btn_round"
                android:text="@string/animation_frame_stop"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/anim_frame_xml_start" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/anim_frame_code_cv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp_8"
        app:cardCornerRadius="@dimen/dp_8"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/anim_frame_xml_cv"
        app:layout_constraintTop_toBottomOf="@id/anim_frame_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/anim_frame_code_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Code"
                android:textSize="@dimen/sp_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/anim_frame_code_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/shape_btn_round"
                android:text="@string/animation_frame_start"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/anim_frame_code_title" />

            <Button
                android:id="@+id/anim_frame_code_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/shape_btn_round"
                android:text="@string/animation_frame_stop"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/anim_frame_code_start" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/anim_frame_rv"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/anim_frame_toolbar" />-->

    <ImageView
        android:id="@+id/anim_frame_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/anim_frame_xml_cv"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>